# src/loghistory/model.js
@@ -2,9 +2,54 @@ const { SQL, toCamelCase } = require("../../libs/tools");
 const Token = require('../../libs/token');
 const moment = require('moment')
 
-async function getAll(data) {
+async function paginator(data,headers) {
     try {
-        let sql = `SELECT * FROM log_history`;            
+        let {token} = headers;
+        let {start, lenght, search, order, sort} = data;
+        let user = Token.getDateToken(token);
+        let idUser = user.sub.id;
+        if (search == undefined || search == '') search = '';
+
+        let sql = `SELECT count(id) as recordsTotal FROM log_history WHERE id_user = ${idUser}`
+        let outsql = await SQL(sql);
+        let recordsTotal = outsql[0].recordsTotal;
+
+        sql = `SELECT count(id) as recordsFiltered 
+                FROM log_history 
+                WHERE id_user = ${idUser} AND 
+                (message like CONCAT('%', '${search}' , '%')
+                OR response like CONCAT('%', '${search}' , '%'))`
+                console.log(sql)
+        outsql = await SQL(sql);
+        let recordsFiltered = outsql[0].recordsFiltered;
+
+        sql = `SELECT * FROM log_history 
+                WHERE id_user = ${idUser} AND 
+                (message like CONCAT('%', '${search}' , '%')
+                OR response like CONCAT('%', '${search}' , '%'))
+                ORDER BY id ${order} LIMIT ${start}, ${lenght}`; 
+        outsql = await SQL(sql);        
+        let list = outsql
+
+        let out = {
+            code: 200,
+            message: "Paginator...!",
+            data: { recordsTotal, recordsFiltered, list }
+          };
+      
+          return out;
+
+    } catch (error) {
+        return ({ code: 400, message: 'Sql Errors', error: error.sqlMessage });
+    }
+}
+
+async function getAll(headers) {
+    try {
+        let {token} = headers;
+        let user = Token.getDateToken(token);
+        let idUser = user.sub.id;
+        let sql = `SELECT * FROM log_history WHERE id_user = ${idUser}`;           
         let outsql = await SQL(sql);
 
         return out = { code: 200, method: 'Get All', message: 'OK', data: toCamelCase(outsql) };   
@@ -14,11 +59,14 @@ async function getAll(data) {
     }
 }
 
-async function getOne(data) {
+async function getOne(data,headers) {
     try {
+        let {token} = headers;
+        let user = Token.getDateToken(token);
+        let idUser = user.sub.id;
         let { id } = data;     
 
-        let sql = `SELECT * FROM log_history WHERE id = ${id};`;            
+        let sql = `SELECT * FROM log_history WHERE id = ${id} AND id_user = ${idUser};`;            
         let outsql = await SQL(sql);
 
         if (outsql.length != 0) {
@@ -33,12 +81,15 @@ async function getOne(data) {
     }
 }
 
-async function add(data) {
+async function add(data,headers) {
     try {
-        const { idUser, uuId, message, type } = data;
+        let {token} = headers;
+        let user = Token.getDateToken(token);
+        let idUser = user.sub.id;
+        const { message, response, files } = data;
         const createdAt = moment().format('YYYY-MM-DD HH:mm:ss');
         
-        let sql = `INSERT INTO log_history ( id_user, uuid, message, type, createdAt ) VALUES (${idUser}, '${uuId}', '${message}', '${type}', '${createdAt}');`;                   
+        let sql = `INSERT INTO log_history ( id_user, message, response, files, createdAt ) VALUES (${idUser}, '${message}', '${response}', '${files}', '${createdAt}');`;                   
         let outsql = await SQL(sql);
         let id = outsql.insertId;
         
@@ -53,11 +104,14 @@ async function add(data) {
     }
 }
 
-async function update(data) {
+async function update(data,headers) {
     try {
-        const { id, idUser, uuId, message, type } = data;
+        let {token} = headers;
+        let user = Token.getDateToken(token);
+        let idUser = user.sub.id;
+        const { id, message, response, files } = data;
       
-        let sql = `UPDATE log_history SET id_user = ${idUser}, uuid = '${uuId}', message = '${message}', type = ${type} WHERE id = ${id};`;     
+        let sql = `UPDATE log_history SET id_user = ${idUser}, message = '${message}', response = '${response}', files = '${files}' WHERE id = ${id};`; 
         let outsql = await SQL(sql);
         
         sql = `SELECT * FROM log_history WHERE id = ${id};`;                   
@@ -89,5 +143,6 @@ module.exports = {
     getOne,
     add,
     update,
-    deleted
+    deleted,
+    paginator
 }
