# src/loghistory/validate.js
@@ -1,4 +1,5 @@
 const { check, query } = require('express-validator');
+const { paginator } = require('./model');
 
 const notempty = "It can't be empty";
 const notnumeric = "Must Be Numeric";
@@ -6,37 +7,41 @@ const validemail = "It must be a valid email";
 
 
 const loginValidate = {     
+    paginator:[
+        query('start')
+			.notEmpty().withMessage(notempty)
+			.isNumeric().withMessage(notnumeric),
+        query('lenght')
+			.notEmpty().withMessage(notempty)
+			.isNumeric().withMessage(notnumeric),
+        query('order')
+			.notEmpty().withMessage(notempty)      	 
+    ],
+    
     getOne:[
         query('id')
 			.notEmpty().withMessage(notempty)
 			.isNumeric().withMessage(notnumeric)	 
     ],
-    add:[ 
-        check('idUser')
-			.notEmpty().withMessage(notempty)
-            .isNumeric().withMessage(notnumeric),	 
-        check('uuId')
-			.notEmpty().withMessage(notempty),
+    add:[  
         check('message')
+			.notEmpty().withMessage(notempty),
+        check('response')
 			.notEmpty().withMessage(notempty),	 
-        check('type')
+        check('files')
 			.notEmpty().withMessage(notempty) 
-            .isNumeric().withMessage(notnumeric)   	 
+             	 
     ],
     update:[
         check('id')
 			.notEmpty().withMessage(notempty)
 			.isNumeric().withMessage(notnumeric),
-        check('idUser')
-			.notEmpty().withMessage(notempty)
-            .isNumeric().withMessage(notnumeric),	 
-        check('uuId')
+            check('message')
 			.notEmpty().withMessage(notempty),
-        check('message')
+        check('response')
 			.notEmpty().withMessage(notempty),	 
-        check('type')
-			.notEmpty().withMessage(notempty) 
-            .isNumeric().withMessage(notnumeric)   	 	 
+        check('files')
+			.notEmpty().withMessage(notempty)   	 	 
     ],
     delete:[
         query('id')
