# src/paymentdetails/validate.js
@@ -7,6 +7,22 @@ const validemail = "It must be a valid email";
 
 
 const loginValidate = {     
+    paginator:[
+        query('start')
+			.notEmpty().withMessage(notempty)
+			.isNumeric().withMessage(notnumeric),
+        query('lenght')
+			.notEmpty().withMessage(notempty)
+			.isNumeric().withMessage(notnumeric),
+        query('order')
+			.notEmpty().withMessage(notempty)      	 
+    ],
+
+    getAll:[
+        query('idSubscribers')
+			.notEmpty().withMessage(notempty)
+			.isNumeric().withMessage(notnumeric)	 
+    ],
     getOne:[
         query('id')
 			.notEmpty().withMessage(notempty)
